# PopForecast

./: .gitignore  .python-version  ARCHITECTURE.md  IMPLEMENTATION_LOG.md  README.md  WORKFLOW_SAPE.md  pyproject.toml  test_lastfm_conn.py
models/cycle_02/: baseline_huber15_audit_v2.json  baseline_huber15_audit_v3_from_pack.json  frozen_config_cycle2.json
models/cycle_03/: champion.joblib  imputer.joblib  run_metadata_cycle3.json
models/cycle_04/: c4_global_challenger.json  c4_topology_kmeans_k4.pkl  c4_topology_scaler.pkl  run_metadata_cycle4.json
models/cycle_05/: expert_0_cold.joblib  expert_2_mainstream.joblib  gating_config.json
notebooks/: 01_EDA.ipynb  02_baseline_train.ipynb  03_feature_engineering.ipynb  04_modeling_robustness.ipynb  05_error_analysis_interpretabilidade.ipynb  05_error_analysis_interpretability.ipynb  06_mainstream_refinement_moe.ipynb  EDA.ipynb
src/api/: lastfm_client.py  musicbrainz_client.py
src/core/: artist_analytics.py  backend_engine.py  constants.py  curator_menu.py  features.py  rb_artist_triangulation.py  rb_catalog.py  rb_track_inference.py  text_matching.py  track_variant_matching.py  train.py
src/data/: preprocessing.py
src/features/: build_lastfm_features.py  build_musicbrainz_features.py
src/scripts/: download_data.py  enrich_with_lastfm.py  enrich_with_musicbrainz.py  enrich_with_wikidata.py  fix_schema_drift.py  init_project_structure.py
src/ui/: app.py
tests/regression/: compare_regression.py  fallback_smoke.py  public_api_smoke.py  regression_smoke.py
(+3 files in other folders)
