[project]
name = "popforecast"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (<3.0.0)",
    "scikit-learn (<1.8)",
    "xgboost (>=3.1.3,<4.0.0)",
    "streamlit (>=1.53.1,<2.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "kaggle (<1.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
